add some messages to you

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
   </head>
   <body>
     <h1>tite!!</h1>
+    <div>
+      <p>Napakaganda kong nilalang alam mo ba yon?</p>
+    </div>
   </body>
 </html>
