--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <p>omsim</p>
       <p>
         Hey there joaquin, I tried to add another line of code MAKE THIS
-        RIGHT!!!
+        RIGHT!!!s
       </p>
       <h2> tite </h2>
     </div>
