--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         RIGHT!!!s
       </p>
       <h2> tite </h2>
-      <h3> malake </h3>
+      <h3> burat </h3>
     </div>
   </body>
 </html>
